Preparation for view and some rudimentary UI

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@ and Electron
 
 <div id="progress" style="display: block; background-color: red; height: 10px;">&nbsp;</div>
 
+<hr/>
+
+<div id="searchform">
+    <input type="text" id="searchInput" size="20"/>
+    <input type="button" id="searchBtn" value="Cari"/>
+</div>
+
+<pre id="searchResult"></pre>
+
 </body>
 <script>
     // You can also require other files to run in this process
