--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ and Electron
 <pre id="searchResult"></pre>
 
 </body>
+<script>window.$ = window.jQuery = require('jquery');</script>
 <script>
-    // You can also require other files to run in this process
     require('./renderer.js')
 </script>
 </html>
