Header and introduction help

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             <div id="srp-search-form">
                 <div id="search-form-container">
                     <div id="search-form">
-                        <input type="text" name="q" id="search-box" value="" autocomplete="off"/><input type="submit" value="Cari" id="search-submit"/>
+                        <input type="text" name="q" id="search-box" value="" autocomplete="off"/><input type="submit"
+                                                                                                        value="Cari"
+                                                                                                        id="search-submit"/>
                     </div>
                     <div id="progress-container">
                         <div id="progress" style="width: 0px;">&nbsp;</div>
@@ -25,8 +27,31 @@
 
         </div>
     </div>
+    <div id="srp-header">
+        <h3>
+            Lafzi: Pencarian Lafadz Al-Quran
+        </h3>
+    </div>
     <div id="body-container">
+        <div id="intro-help" class="bg-dots-light">
+            <p>
+                Aplikasi ini dapat mencari suatu lafadz dalam Al-Quran.
+                Ketikkan potongan ayat atau lafadz dalam Al-Quran yang ingin dicari (dalam tulisan latin), contoh:
+            </p>
+            <ul>
+                <li>alhamdulillahi rabbil-'alamin</li>
+                <li>innalloha ma'a shoobiriin</li>
+                <li>laa ilaaha illallaah</li>
+                <li>kun fayakuun</li>
+            </ul>
+            <p>
+                Tips: Gunakan spasi untuk pemisah antar-kata agar lebih akurat.
+            </p>
+        </div>
         <div id="searchResult"></div>
+    </div>
+    <div id="body-overlay" style="display: none;">
+        &nbsp;
     </div>
 </div>
 
