Copy, open result

--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
             <div class="sura-name">
                 <div class="num"></div>
                 <span class="aya_name"></span>
-                <div class="aya-tools">
-                    <a class="sura-link graybtn" title="Buka ayat ini di Al-Quran online"
-                       target="_blank"><span class="icon"></span> Buka di Al-Quran</a>
-                    <a class="sura-link graybtn" title="Salin" href="#" style="margin-right: 5px;">Salin Teks</a>
+                <div class="aya_tools">
+                    <a class="sura-link graybtn btn_open" title="Buka ayat ini di Al-Quran online">
+                        <span class="icon"></span> Buka di Al-Quran
+                    </a>
+                    <a class="sura-link graybtn btn_copy" title="Salin" href="#" style="margin-right: 5px;">Salin Teks</a>
                 </div>
             </div>
             <div class="aya_container">
