Handling no result

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </h3>
     </div>
     <div id="body-container">
-        <div id="intro-help" class="bg-dots-light">
+        <div id="body-message" class="bg-dots-light">
             <p>
                 Aplikasi ini dapat mencari suatu lafadz dalam Al-Quran.
                 Ketikkan potongan ayat atau lafadz dalam Al-Quran yang ingin dicari (dalam tulisan latin), contoh:
