Program menu (already functional)

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             <p>
                 Tips: Gunakan spasi untuk pemisah antar-kata agar lebih akurat.
             </p>
+            <p>
+                Anda dapat mengubah pengaturan di menu Program -> Pengaturan.
+            </p>
         </div>
         <div class="search-result-block" id="srb-template" style="display: none;">
             <div class="sura-name">
