--- a/settings.html
+++ b/settings.html
@@ -88,7 +88,7 @@
         </table>
     </div>
     <div style="position: absolute; bottom: 0; left: 0; width: 100%; text-align: center; background-color: #EEE; padding: 15px 0; border-top: 1px solid #ccc;">
-        <input type="button" value="   OK   " id="settingsSave">
+        <input type="button" value="   Simpan   " id="settingsSave">
     </div>
 </div>
 
