About window, some buttons in intro help

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
     <div id="body-container">
         <div id="body-message" class="bg-dots-light">
             <p>
-                Aplikasi ini dapat mencari suatu lafadz dalam Al-Quran.
+                Aplikasi ini dapat mencari suatu lafadz dalam Al-Quran dengan tulisan latin.
                 Ketikkan potongan ayat atau lafadz dalam Al-Quran yang ingin dicari (dalam tulisan latin), contoh:
             </p>
             <ul>
-                <li>alhamdulillahi rabbil-'alamin</li>
-                <li>innalloha ma'a shoobiriin</li>
-                <li>laa ilaaha illallaah</li>
-                <li>kun fayakuun</li>
+                <li>alhamdulillahi rabbil-'alamin <a class="graybtn enter_sample">↖</a></li>
+                <li>innalloha ma'a shoobiriin     <a class="graybtn enter_sample">↖</a></li>
+                <li>laa ilaaha illallaah          <a class="graybtn enter_sample">↖</a></li>
+                <li>kun fayakuun                  <a class="graybtn enter_sample">↖</a></li>
             </ul>
             <p>
                 Tips: Gunakan spasi untuk pemisah antar-kata agar lebih akurat.
