--- a/settings.html
+++ b/settings.html
@@ -23,6 +23,9 @@
             -webkit-user-select: text;
             user-select: text;
         }
+        body {
+            border: 1px solid #CCCCCC;
+        }
     </style>
 </head>
 <body>
