--- a/about.html
+++ b/about.html
@@ -7,14 +7,20 @@
 
     <style>
         body {
-            border: 1px solid #CCCCCC;
+            box-shadow:inset 0px 0px 0px 1px #ccc;
         }
     </style>
 </head>
 <body>
 
 <div id="main-wrap">
-    <div id="srp-header" style="-webkit-app-region: drag; margin-top: 0;">
+    <div id="srp-header" style="
+    -webkit-app-region: drag;
+    margin-top: 0;
+    top: 1px;
+    left: 1px;
+    width: calc(100vh - 22px);
+    ">
         <h3>
             Tentang Lafzi
         </h3>
@@ -36,7 +42,16 @@
         </p>
 
     </div>
-    <div style="position: absolute; bottom: 0; left: 0; width: 100%; text-align: center; background-color: #EEE; padding: 15px 0; border-top: 1px solid #ccc;">
+    <div style="
+        position: absolute;
+        bottom: 1px;
+        left: 1px;
+        width: calc(100vh - 2px);
+        text-align: center;
+        background-color: #EEE;
+        padding: 15px 0;
+        border-top: 1px solid #ccc;
+        ">
         <input type="button" value="   Tutup   " id="windowClose">
     </div>
 </div>
